Мелкие правки шапки в версии для слабовидящих

--- a/source/sass/blocks/menu-btn.scss
+++ b/source/sass/blocks/menu-btn.scss
@@ -17,6 +17,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    flex-shrink: 0;
     width: 28px;
     height: 21px;
     padding: 0;
