--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -36,6 +36,8 @@
   margin-left: 49px;
   margin-right: auto;
   font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
   text-transform: uppercase;
 
   &::after {
@@ -54,7 +56,7 @@
 .page-header__version-btn {
   display: flex;
   align-items: center;
-  max-width: 240px;
+  max-width: 295px;
 
   &--menu {
     display: none;
@@ -63,6 +65,7 @@
 
 .page-header__version-btn svg {
   display: block;
+  flex-shrink: 0;
   width: 18px;
   height: 18px;
   margin-right: 11px;
@@ -108,8 +111,8 @@
   .page-header__site-name {
     width: 130px;
     margin-right: 24px;
-    font-size: rem(15px);
-    line-height: rem(17px);
+    font-size: 15px;
+    line-height: 17px;
   }
 
   .page-header__location-switcher,
@@ -134,8 +137,8 @@
     width: 90px;
     margin-left: 25px;
     margin-right: auto;
-    font-size: rem(10px);
-    line-height: rem(12px);
+    font-size: 10px;
+    line-height: 12px;
 
     &::after {
       content: "";
