--- a/source/sass/blocks/poll-page.scss
+++ b/source/sass/blocks/poll-page.scss
@@ -257,7 +257,7 @@ span.poll-page__hide {
     width: 24px;
     height: 24px;
 
-    background-image: url("../../img/icon-time-white.svg");
+    background-image: url("../img/icon-time-white.svg");
     background-repeat: no-repeat;
 
     @include tablet {
