--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "plugins/nouislider";
 
 /* Блоки */
+@import "blocks/document";
 @import "blocks/section";
 @import "blocks/page-body";
 @import "blocks/page-content";
