--- a/source/sass/blocks/discussion.scss
+++ b/source/sass/blocks/discussion.scss
@@ -37,7 +37,7 @@
   padding-top: 24px;
   padding-bottom: 32px;
 
-  border-bottom: 1px solid $light-grey;
+  border-bottom: 1px solid var(--color-stroke);
 
   @media (max-width: $desktop-width - 81) {
     padding-bottom: 31px;
@@ -118,6 +118,14 @@
       display: block;
     }
   }
+
+  svg {
+    fill: $light-blue-accent;
+  }
+}
+
+.mod-theme-blue .discussion__used svg {
+  fill: currentColor;
 }
 
 .discussion__help {
@@ -135,7 +143,7 @@
   color: var(--color-text-main);
   white-space: nowrap;
 
-  background-color: $light-blue;
+  background-color: var(--color-interactive-light-default);
   border-radius: 2px;
   transform: translateX(-40%);
 
@@ -148,7 +156,7 @@
     width: 8px;
     height: 8px;
 
-    background-color: $light-blue;
+    background-color: var(--color-interactive-light-default);
     border-radius: 1px;
     transform: rotate(45deg);
   }
