--- a/source/sass/blocks/project-vote.scss
+++ b/source/sass/blocks/project-vote.scss
@@ -165,7 +165,7 @@
   margin-top: 16px;
   font-size: rem(13px);
   line-height: rem(17px);
-  color: $grey-default;
+  color: var(--color-text-caption);
 }
 
 .project-vote__revoke-form {
