Добавляет тень для закреплённой шапки

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -79,6 +79,8 @@
 
 @include desktop-only {
   .page-header--above-content {
+    box-shadow: 0 4px 8px rgba(46, 67, 102, 0.1);
+
     .page-header__bar,
     .page-header__location-address {
       display: none;
