--- a/source/sass/blocks/gallery-popup.scss
+++ b/source/sass/blocks/gallery-popup.scss
@@ -51,6 +51,7 @@
   font-size: rem(15px);
   line-height: rem(20px);
   color: var(--color-text-secondary);
+  overflow: auto;
 }
 
 .gallery-popup .popup__bar--bottom {
