--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -93,7 +93,7 @@ html {
     --color-bg-main-transparent: #{rgba($light-yellow, 0)};
     --color-bg-secondary-transparent: #{rgba(#f7e4d8, 0)};
 
-    --color-stroke: #{$grey};
+    --color-stroke: #{$comfort};
     --color-tag: #{$light-grey};
 
     --color-text-main: #{$comfort};
@@ -115,7 +115,7 @@ html {
     --color-bg-main-transparent: #{rgba($brown, 0)};
     --color-bg-secondary-transparent: #{rgba($dark-main, 0)};
 
-    --color-stroke: #{$grey};
+    --color-stroke: #{$light-green};
     --color-tag: #{$grey};
 
     --color-text-main: #{$light-green};
