Правит стрелки ссылок архива на Главной

--- a/source/sass/blocks/poll.scss
+++ b/source/sass/blocks/poll.scss
@@ -170,7 +170,8 @@ span.poll__hide {
   display: none;
 
   @media (max-width: $tablet-width - 1) {
-    display: block;
+    display: flex;
+    justify-content: center;
     margin-top: 24px;
   }
 }
