--- a/source/sass/blocks/project-link.scss
+++ b/source/sass/blocks/project-link.scss
@@ -25,7 +25,7 @@
     width: 20px;
     height: 20px;
     margin-right: 8px;
-    background-image: url('../img/icon-link.svg');
+    background-image: url("../img/icon-link.svg");
     background-repeat: no-repeat;
     background-position: center;
   }
